Ajout Javadoc + clean sonarqube erreur + renommage package